[gd_scene load_steps=3 format=3 uid="uid://b76jsg2qg8gua"]

[ext_resource type="Script" uid="uid://cnft807qcxvx" path="res://scripts/ui/dialog_ui.gd" id="1_sx8pb"]
[ext_resource type="Texture2D" uid="uid://db01pl4v4bwlm" path="res://assets/ui/frames/dialog_frame_transparent.png" id="2_im446"]

[node name="DialogUI" type="Control"]
layout_mode = 3
anchor_top = 0.55
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sx8pb")

[node name="DialogFrame" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.415
offset_top = -199.0
offset_right = 414.585
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.635, 0.635)
mouse_filter = 0
texture = ExtResource("2_im446")
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 30
patch_margin_bottom = 30

[node name="DialogContent" type="Control" parent="DialogFrame"]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterName" type="RichTextLabel" parent="DialogFrame/DialogContent"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 63.6496
offset_top = -24.6067
offset_right = -21.3504
offset_bottom = 15.3933
grow_horizontal = 2
theme_override_colors/default_color = Color(0.901961, 0.72549, 0.392157, 1)
theme_override_constants/line_separation = 4
bbcode_enabled = true
text = "[b]Narrator[/b]"

[node name="ChoiceScrollContainer" type="ScrollContainer" parent="DialogFrame/DialogContent"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
horizontal_scroll_mode = 0

[node name="ChoiceContainer" type="VBoxContainer" parent="DialogFrame/DialogContent/ChoiceScrollContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="DialogText" type="RichTextLabel" parent="DialogFrame/DialogContent"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -160.8
offset_top = -78.88
offset_right = 179.2
offset_bottom = 97.12
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.450648, 0.450648, 0.450648, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Welcome to the mystical realm of Questeria, a land where heroes forge their destinies through quests and adventures."
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
